# checkers

./: .gitignore  ws-proxy.js
server/: CMakeLists.txt  ReadMe.txt  build_unix.sh  build_windows.bat  checkers_game.db  makefile  test_server  test_server.cpp  test_threadpool.cpp
server/GameLogic/: .gitignore  Board.cpp  Board.h  HumanPlayer.cpp  Piece.cpp  Player.h  README.md  main.cpp  makefile
server/asio/asio/include/: asio.hpp
server/asio/asio/include/asio/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  (+96 more)
server/include/: Server.h  Session.h  SocketWrapper.h  ThreadPool.h  Utilities.h
server/src/: DatabaseManager.cpp  DatabaseManager.h  Server.cpp  Session.cpp  ThreadPool.cpp  Utilities.cpp
server/websocketpp/websocketpp/: client.hpp  close.hpp  connection.hpp  endpoint.hpp  error.hpp  frame.hpp  server.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp
server/websocketpp/websocketpp/common/: asio.hpp  asio_ssl.hpp  chrono.hpp  connection_hdl.hpp  functional.hpp  memory.hpp  network.hpp  random.hpp  system_error.hpp  thread.hpp  type_traits.hpp
server/websocketpp/websocketpp/config/: asio.hpp  asio_client.hpp  asio_no_tls.hpp  asio_no_tls_client.hpp  debug_asio.hpp  debug_asio_no_tls.hpp  minimal_client.hpp
server/websocketpp/websocketpp/http/: parser.hpp  request.hpp  response.hpp
server/websocketpp/websocketpp/logger/: basic.hpp  stub.hpp  syslog.hpp
server/websocketpp/websocketpp/processors/: hybi00.hpp  hybi07.hpp  hybi08.hpp  hybi13.hpp  processor.hpp
(+509 files in other folders)
